[package]
name = "tenjin_sdn"
description = "The software defined network and Openflow protocol"
version = "0.3.3"
authors = ["Nawasan <nawasan.dev@gmail.com>"]
license = "MIT"
edition = "2021"
readme = "README.md"
repository = "https://github.com/Arikato111/Tenjin"
categories = ["command-line-utilities"]
keywords = ["sdn", "cli", "openflow"]

include = ["src/*"]

[lib]
name = "tenjin"
path = "src/lib.rs"

[[bin]]
name = "tenjin"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
byteorder = "1.0.0"
clap = { version = "4.5.13", features = ["derive"], optional = true }
clap_complete = { version = "4.5.23", optional = true }

[profile.release]
strip = true

[features]
default = []
example = []
cli = ["dep:clap", "dep:clap_complete", "example"]
full = ["cli"]
