[package]
name = "tenjin_sdn"
description = "Tenjin is The software-defined networking framework written in Rust, offering high performance and memory safety. It can be used as both a framework and a command line tool."
version = "0.4.0"
authors = ["Nawasan <nawasan.dev@gmail.com>"]
license = "MIT"
edition = "2021"
readme = "README.md"
repository = "https://github.com/Arikato111/Tenjin"
categories = ["command-line-utilities"]
keywords = ["sdn", "cli", "openflow"]

include = ["src/*"]

[lib]
name = "tenjin"
path = "src/lib.rs"

[[bin]]
name = "tenjin"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
byteorder = "1.0.0"
clap = { version = "4.5.13", features = ["derive"], optional = true }
clap_complete = { version = "4.5.23", optional = true }

[profile.release]
strip = true

[features]
default = []
example = []
cli = ["dep:clap", "dep:clap_complete", "example"]
full = ["cli"]
