[package]
name = "tenjin_sdn"
description = "Tenjin is The software-defined networking framework written in Rust, offering high performance and memory safety. It can be used as both a framework and a command line tool."
version = "1.0.1"
authors = ["Nawasan <nawasan.dev@gmail.com>"]
license = "MIT"
edition = "2021"
readme = "README.md"
repository = "https://github.com/Arikato111/Tenjin"
categories = ["command-line-utilities"]
keywords = ["sdn", "cli", "openflow"]

include = ["src/*"]

[lib]
name = "tenjin_sdn"
path = "src/lib.rs"

[[bin]]
name = "tenjin"
path = "src/main.rs"

[dependencies]
byteorder = "1.0.0"
clap = { version = "4.5.13", features = ["derive"], optional = true }
clap_complete = { version = "4.5.23", optional = true }
etherparse = "0.17.0"
tokio = { version = "1.40.0", features = [
    "rt-multi-thread",
    "net",
    "macros",
    "io-util",
] }

[profile.release]
strip = true

[features]
default = ["full"]
example = []
cli = ["dep:clap", "dep:clap_complete", "example"]
full = ["cli"]
